# pico-rp2350-UART-driver

./: README.md
source/: CMakeLists.txt  RX_example.c  TX_example.c  rp2350_uart_driver.c  rp2350_uart_driver.h  uart.c  uart.h
